# craft-types

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  common.cpp  labels.yaml  package.yaml
bazel/: deps.bzl  shared.bzl  syndic.bzl
cmake/flags/: win_x64_vc140.cmake
doc/: 0_overview.md  1-1_instance.md  1-2_core.md  1-2_symbol-table.md  1-3_calling.md  2-1_graph-design.md  2-1_graph.md  2-2_core.md  2-3_subroutines.md  2-3_syndicate.md  2-4_cpp.md  2-5_features.md  3-1_cpp-defines.md  3-2_cpp-instance.md  3-3_cpp-object.md  4-1_features.md  4-2_examples.md  4-3_defines.md  boilerplate.md  defines_v2.md  features.md  graph.md  overview.md  todo.md
doc/graph/: graph.md
entry/: main.cpp
scripts/: win_x64_vc140.bat
src/: Aspect.h  Context.cpp  Context.h  FactoryAspectManager.hpp  Feature.h  InstanceAspectManager.hpp  Object.h  PConstructor.h  PConversion.h  PIdentifier.h  PObjectContextual.h  PParse.h  Provider.h  SLifecycle.h  SObjectFungible.h  Type.h  base.cpp  base.h  common.h  core.cpp  default_types_c.cpp  default_types_c.h  default_types_cpp.cpp  defines.h  exceptions.hpp  prelude.h
src/syn/: common.h  defines.h  dll_entry.inc  dll_helpers.h  exceptions.hpp  syn.cpp  syn.h
src/syn/boot/: default_features.cpp  default_types_c.cpp  default_types_c.h  default_types_cpp.cpp  default_types_cpp.h  system_into_cpp.h
src/syn/core/: containers.cpp  containers.h  conversions.cpp  conversions.h  cpp_graph.cpp  cpp_graph.h  module_graph.cpp  module_graph.h  numerics.cpp  numerics.h  syndicate_graph.cpp  syndicate_graph.h  system_graph.cpp  system_graph.h
src/syn/cpp/: CppSystem.h  DefineHelper.hpp  DefineHelper_old.hpp  Module.hpp  cpp_interface.cpp  cpp_interface.h  cpp_types.cpp  cpp_types.h  expressions.hpp  graph.hpp  prelude.h  prelude_system.h  to_string.cpp
src/syn/cpp/dispatch/: BasicDispatcher.hpp  GenericInvoke.hpp
src/syn/cpp/instance/: containers.hpp  policies.hpp  prelude.hpp
src/syn/runtime/: instance.h
src/syn/system/: Graph.hpp  ModuleBase.cpp  ModuleBase.h  Symbol.hpp  SymbolTable.cpp  SymbolTable.h  TypeId.cpp  TypeId.h  TypeStore.cpp  TypeStore.h  dispatch.cpp  dispatch.h  epilogue.h  prelude.h
src/syn/system/expression/: expression.cpp  expression.h  queries.cpp  queries.h
src/syn/system/runtime/: ExpressionDispatcher.hpp  SimpleDispatcher.hpp
src/types/: Aspect.h  Context.cpp  Context.h  FactoryAspectManager.hpp  Feature.h  Instance.hpp  InstanceAspectManager.hpp  Object.h  ObjectDefineDetails.hpp  PClone.h  PConstructor.h  PConversion.h  PIdentifier.h  PObjectContextual.h  PParse.h  PStringer.h  Provider.h  README.md  SContainer.h  SLifecycle.h  SObjectComposite.h  SObjectFungible.h  SObjectManipulation.h  SingletonProviderManager.hpp  Type.h  Types.h  common.h  core.cpp  core.h  default_features.cpp  default_types_c.cpp  default_types_c.h  default_types_cpp.cpp  default_types_cpp.h  default_types_mpir.cpp  default_types_mpir.h  defines.h  dll_entry.inc  exceptions.hpp  helpers.h  (+5 more)
src/types/boot/: Context.cpp  Context.h  PClone.h  PConstructor.h  PConversion.h  PIdentifier.h  PObjectContextual.h  PParse.h  PRepr.h  PStringer.h  SContainer.h  SLifecycle.h  SObjectComposite.h  SObjectFungible.h  SObjectManipulation.h  default_features.cpp  default_types_c.cpp  default_types_c.h  default_types_cpp.cpp  default_types_cpp.h  default_types_mpir.cpp  default_types_mpir.h  system_into_cpp.h
src/types/cpp/: DefineHelper.hpp  FactoryAspectManager.hpp  Feature.h  InfoDefineHelper.hpp  Instance.hpp  InstanceAspectManager.hpp  Object.h  Provider.h  SingletonProviderManager.hpp  TypeDefineHelper.hpp  Types.h  cpp_interface.cpp  cpp_interface.h  cpp_types.cpp  cpp_types.h  expressions.hpp  graph.hpp  instance_prelude.hpp  to_string.cpp
src/types/graph/: BaseType.cpp  BaseType.h  CppNativeActualType.cpp  CppNativeActualType.h  CppType.cpp  CppType.h  README.md  RootType.hpp  SType.hpp  TypeGraph.cpp  TypeGraph.h  TypeGraphSystem.cpp  TypeGraphSystem.h  TypeId.hpp  graph.h
src/types/system/: ExpressionDispatcher.hpp  GenericInvoke.hpp  SimpleDispatcher.hpp  advanced_types.cpp  advanced_types.h  basic_types.cpp  basic_types.h  epilogue.h  graph.cpp  graph.h  identifiers.cpp  identifiers.h  multimethods.cpp  multimethods.h  native_types.cpp  native_types.h  store.cpp  store.h
src/types/system/expression/: README.md  expression.cpp  expression.h  queries.cpp  queries.h
src/types/utility/: all.h
src/types/utility/craft/: graph.hpp
src/types/utility/graph/: algo.hpp  graph.hpp  graph_algo.hpp  graph_core.hpp  graph_final.hpp  graph_query.hpp  graph_todo.hpp  graph_typed.hpp
src/types/utility/graph/model/: core.hpp  typed.hpp
src/types/utility/stdext/: exception.h  introspection.hpp  iterators.hpp  platform_windows.h  string.hpp
test/: README.md  adv_object.cpp  basic_object.cpp  basic_object.h  common.h  empty_aspects.cpp  empty_aspects.h  empty_providers.cpp  empty_providers.h  expression_multimethod.cpp  external_struct.h  main.cpp  simple_multimethod.cpp  simple_multimethod.h  test_Context.cpp  test_features.cpp  test_graph.cpp  test_instance.cpp  test_lifecycle.cpp  test_std_string.cpp  test_to_string.cpp
test/examples/: 0_00_basics.md
test/old/: adv_object.cpp  adv_object.h  basic_object.cpp  basic_object.h  common.h  empty_aspects.h  empty_providers.h  expression_multimethod.cpp  expression_multimethod.h  external_struct.cpp  external_struct.h  simple_multimethod.cpp  simple_multimethod.h  test_Context.cpp  test_features.cpp  test_graph.cpp  test_instance.cpp  test_lifecycle.cpp  test_multimethods.cpp  test_std_string.cpp  test_to_string.cpp
test/old/examples/: 0_02_concrete_types.cpp
test/unit/: main.cpp  shared.h
test/unit/cpp/: CppSystem.cpp
test/unit/cpp/define/: struct.cpp
test/unit/cpp/instance/: containers.cpp
test/unit/runtime/: instance.cpp
test/unit/syndicate/: abstract.cpp
test/unit/system/: TypeStore.cpp  dispatch.cpp
test/unit/utility/graph/: graph_algo.cpp  graph_core.cpp  graph_query.cpp  shared.cpp  shared.h
